--- a/a3-objectClassification/Assignment3.ipynb
+++ b/a3-objectClassification/Assignment3.ipynb
@@ -118,17 +118,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iIqZpOl3jY0Q"
-      },
-      "source": [
-        "print(\"Berlin was geht ab\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MFz0s31SxNyP"
@@ -269,7 +258,15 @@
       "source": [
         "################ Unzip the dataset in the Colab runtime #################\n",
         "import zipfile\n",
-        "pathToZip = '/content/drive/My Drive/colab/lectures/machineVision/assignments/solutions/a3-objectClassification/data/pedestrianData.zip'\n",
+        "import requests\n",
+        "\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/data/a3-objectClassification/pedestrianData.zip'\n",
+        "r = requests.get(url, allow_redirects=True)\n",
+        "\n",
+        "pathToZip = 'pedestrianData.zip'\n",
+        "\n",
+        "open(pathToZip, 'wb').write(r.content)\n",
+        "\n",
         "\n",
         "print(\"unzipping {}\".format(pathToZip))\n",
         "\n",
