--- a/a3-objectClassification/Assignment3.ipynb
+++ b/a3-objectClassification/Assignment3.ipynb
@@ -7,10 +7,9 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "RH3vu3HiqaZS",
-        "xQJnwTJQPzvF",
         "_IxxAKTfxxiU"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -79,6 +78,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Braafisch/Machine-Vision-Assignments/blob/main/a3-objectClassification/Assignment3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -197,40 +206,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ybKcetvDlt-o"
-      },
-      "source": [
-        "### In Google Colab only:\n",
-        "Mount the Google Drive associated with your Google account. You will have to click the authorization link and enter the obtained authorization code here in Colab. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "88rhI7gsltLi"
-      },
-      "source": [
-        "# Mount Google Drive\n",
-        "if 'google.colab' in str(get_ipython()):\n",
-        "  from google.colab import drive\n",
-        "  drive.mount('/content/drive', force_remount=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IcxOS80YuDCD"
-      },
-      "source": [
-        "### If you are not using Google Colab:\n",
-        "Just store the image in the same folder as your Jupyter notebook file."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xQJnwTJQPzvF"
       },
       "source": [
@@ -257,20 +232,17 @@
       },
       "source": [
         "################ Unzip the dataset in the Colab runtime #################\n",
-        "import zipfile\n",
+        "import io\n",
         "import requests\n",
+        "import zipfile\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a3-objectClassification/data/pedestrianData.zip'\n",
         "\n",
-        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/data/a3-objectClassification/pedestrianData.zip'\n",
-        "r = requests.get(url, allow_redirects=True)\n",
+        "response = requests.get(url, allow_redirects = True)\n",
+        "stream = io.BytesIO(response.content)\n",
         "\n",
-        "pathToZip = 'pedestrianData.zip'\n",
+        "print(\"unzipping {}\".format(url))\n",
         "\n",
-        "open(pathToZip, 'wb').write(r.content)\n",
-        "\n",
-        "\n",
-        "print(\"unzipping {}\".format(pathToZip))\n",
-        "\n",
-        "with zipfile.ZipFile(pathToZip, 'r') as zip_ref:\n",
+        "with zipfile.ZipFile(stream, 'r') as zip_ref:\n",
         "    zip_ref.extractall(\"pedestrian\")\n",
         "\n",
         "# training images\n",
@@ -297,6 +269,18 @@
       "source": [
         "### Visualize a few images to get a feeling for what the data looks like (**PROVIDED**)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Li-7_r7dtUWs"
+      },
+      "source": [
+        "for image in trainPed:\n",
+        "  print(image)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -374,20 +358,21 @@
         "  hogFeatureSet = np.zeros((len(imageSet), hogDim))\n",
         "\n",
         "  # loop through the imageSet and compute HoG features for each image\n",
-        "  \n",
+        "  for i in range(len(imageSet)):\n",
+        "\n",
         "\n",
         "    # read image\n",
-        "    \n",
+        "    sampleImage = cv2.imread(imageSet[i])\n",
         "\n",
         "    # compute HoG features\n",
-        " \n",
+        "    hogFeatureSet[i] = hogDescriptor.compute(sampleImage).T\n",
         "\n",
         "  print(\"Shape of feature matrix: {}\".format(hogFeatureSet.shape))\n",
         "  return hogFeatureSet\n",
         "# --------------------------------------------------#\n",
         "\n",
         "# create an instance of cv2.HOGDescriptor with the given parameters\n",
-        "hogDescriptor = cv2.HOGDescriptor( ... \n",
+        "hogDescriptor = cv2.HOGDescriptor((18,36), (6,6), (3,3), (3,3), 12)\n",
         "\n",
         "################################\n",
         "\n",
@@ -427,15 +412,15 @@
         "##### YOUR CODE GOES HERE ######\n",
         "\n",
         "# create instance of LinearSVC\n",
-        "\n",
+        "linSVM = svm.LinearSVC(C=0.1)\n",
         "# training data\n",
-        "\n",
-        "\n",
+        "trainData = np.concatenate((trainPedHogFeatures, trainNonPedHogFeatures), axis = 0)\n",
+        "print(trainData.shape, trainPedHogFeatures.shape[0])\n",
         "# labels for the training data \n",
-        "\n",
-        "                                               \n",
+        "labels = np.concatenate((np.full((trainPedHogFeatures.shape[0], 1), 1), np.full((trainNonPedHogFeatures.shape[0], 1), -1)))\n",
+        "print(labels.shape)                                               \n",
         "# train SVM\n",
-        "\n",
+        "linSVM.fit(trainData, labels)\n",
         "###############################"
       ],
       "execution_count": null,
@@ -464,11 +449,14 @@
         "\n",
         "# get score on training set\n",
         "# ...\n",
+        "meanAccuracy = linSVM.score(trainData, labels)\n",
         "print(\"Mean accuracy (training set) = {}%\".format(meanAccuracy))\n",
         "\n",
         "\n",
         "# get score on test set\n",
         "# ...\n",
+        "testData = np.concatenate((testPedHogFeatures, testNonPedHogFeatures), axis = 0)\n",
+        "meanAccuracy = linSVM.score(testData, labels)\n",
         "print(\"Mean accuracy (test set) = {}%\".format(meanAccuracy))\n",
         "\n",
         "###############################"
