--- a/a2-convolution-panoramaStitching/Assignment2.ipynb
+++ b/a2-convolution-panoramaStitching/Assignment2.ipynb
@@ -138,6 +138,13 @@
         "# make sure we show all plots directly below each cell\n",
         "%matplotlib inline\n",
         "\n",
+        "\n",
+        "# HTTP client\n",
+        "import requests\n",
+        "\n",
+        "# Misc\n",
+        "import io\n",
+        "\n",
         "# Some Colab specific packages\n",
         "if 'google.colab' in str(get_ipython()):\n",
         "  # image display\n",
@@ -180,16 +187,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IcxOS80YuDCD"
-      },
-      "source": [
-        "### If you are not using Google Colab:\n",
-        "Just store the image in the same folder as your Jupyter notebook file."
-      ]
     },
     {
       "cell_type": "markdown",
@@ -237,10 +234,13 @@
         "# Load and display the input image \n",
         "\n",
         "# Path to the image (you will need to change that)\n",
-        "imPath = \"/content/convolution/esslingen800px.jpg\"\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a2-convolution-panoramaStitching/convolution/esslingen800px.jpg'\n",
+        "\n",
+        "response = requests.get(url, allow_redirects = True, stream = True).raw\n",
+        "image = np.asarray(bytearray(response.read()), dtype=\"uint8\")\n",
         "\n",
         "# read image and convert to gray\n",
-        "inputImage = cv2.imread(imPath)\n",
+        "inputImage = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
         "inputImage = cv2.cvtColor(inputImage, cv2.COLOR_BGRA2GRAY)\n",
         "\n",
         "# Display the input image\n",
@@ -394,10 +394,13 @@
       },
       "source": [
         "# Path to the image (you will need to change that)\n",
-        "im_path = \"/content/canny_cartoonization/ironman.jpg\"\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a2-convolution-panoramaStitching/canny_cartoonization/ironman.jpg'\n",
+        "\n",
+        "response = requests.get(url, allow_redirects = True, stream = True).raw\n",
+        "image = np.asarray(bytearray(response.read()), dtype=\"uint8\")\n",
         "\n",
         "# read image\n",
-        "input_image = cv2.imread(im_path)\n",
+        "input_image = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
         "\n",
         "# Display the input image\n",
         "print(\"Input image\")\n",
@@ -421,7 +424,7 @@
         "id": "hao9TsQzBA9A"
       },
       "source": [
-        "canny_image = cv2.Canny(input_image, 130, 200)\n",
+        "canny_image = cv2.Canny(input_image, 100, 200)\n",
         "\n",
         "cv2_imshow(canny_image)"
       ],
@@ -443,17 +446,12 @@
         "id": "1dxffv5ACRmn"
       },
       "source": [
-        "bilateral_image = input_image\n",
-        "bilateral_image = cv2.bilateralFilter(bilateral_image, 15, 40, 50)\n",
-        "\n",
-        "gray_image = cv2.cvtColor(input_image, cv2.COLOR_RGB2GRAY)\n",
+        "bilateral_image = cv2.bilateralFilter(input_image, 9, 200, 200)\n",
         "\n",
         "canny_image = cv2.Canny(input_image, 130, 200)\n",
         "canny_image = cv2.cvtColor(canny_image, cv2.COLOR_GRAY2RGB)\n",
         "\n",
         "cartoon_image = cv2.subtract(bilateral_image, canny_image)\n",
-        "\n",
-        "#cv2_imshow(cartoon_image)\n",
         "\n",
         "stack_image = np.hstack([input_image, canny_image, cartoon_image])\n",
         "\n",
@@ -508,6 +506,12 @@
         "import matplotlib.patches as patches\n",
         "# make sure we show all plots directly below each cell\n",
         "%matplotlib inline \n",
+        "\n",
+        "# HTTP client\n",
+        "import requests\n",
+        "\n",
+        "# Misc\n",
+        "import io\n",
         "\n",
         "# Some Colab specific packages\n",
         "if 'google.colab' in str(get_ipython()):\n",
@@ -602,7 +606,7 @@
         "  # Copy the left image into the stitched image\n",
         "  stitchedImage[0:imageLeft.shape[0], 0:imageLeft.shape[1], :] = imageLeft\n",
         "\n",
-        "  return stitchedImage\n"
+        "  return stitchedImage"
       ],
       "execution_count": null,
       "outputs": []
@@ -624,12 +628,19 @@
       "source": [
         "# Load the input images and convert to gray\n",
         "\n",
-        "imPath = \"/content/panoramaStitching/\"\n",
+        "url_base = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a2-convolution-panoramaStitching/panoramaStitching/'\n",
+        "url_left = url_base + 'esslingenPanoLeft.jpg'\n",
+        "url_right = url_base + 'esslingenPanoRight.jpg'\n",
         "\n",
-        "inputImageLeftColor = cv2.imread(imPath + \"esslingenPanoLeft.jpg\")\n",
+        "\n",
+        "response = requests.get(url_left, allow_redirects = True, stream = True).raw\n",
+        "image = np.asarray(bytearray(response.read()), dtype=\"uint8\")\n",
+        "inputImageLeftColor = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
         "inputImageLeft      = cv2.cvtColor(inputImageLeftColor, cv2.COLOR_BGR2GRAY)\n",
         "\n",
-        "inputImageRightColor = cv2.imread(imPath + \"esslingenPanoRight.jpg\")\n",
+        "response = requests.get(url_right, allow_redirects = True, stream = True).raw\n",
+        "image = np.asarray(bytearray(response.read()), dtype=\"uint8\")\n",
+        "inputImageRightColor = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
         "inputImageRight      = cv2.cvtColor(inputImageRightColor, cv2.COLOR_BGR2GRAY)\n",
         "\n",
         "# Display the input images\n",
@@ -802,20 +813,16 @@
         "  for i_match in range(len(matches)):    \n",
         "    # Get the coordinates of left and right points for the current \"match\"\n",
         "    # (in homogeneous coordinates, i.e. a 3-dimensional vector with an added \"1.0\" as third element)\n",
-        "  \n",
-        "    left_hom = np.pad(locationsLeft[i_match], pad_width = ((0, 0), (0, 1)), constant_values = 1)\n",
         "    right_hom = np.pad(locationsRight[i_match], pad_width = ((0, 0), (0, 1)), constant_values = 1)\n",
-        "    #print(f\"Homogenous coordinates left: {left_hom.reshape(3) if left_hom.shape[0] <= 1 else  left_hom} and right: {right_hom.reshape(3) if right_hom.shape[0] <= 1 else  right_hom}\")\n",
+        "    \n",
         "\n",
         "    # Warp the right point to the left image using using the homography. \n",
         "    # Convert back from homogenous coordinates by dividing the first and second element of the vector by the third\n",
         "    warped_to_left = np.matmul(homography, right_hom.T)\n",
         "    warped_to_left = (warped_to_left[:-1] / warped_to_left[-1]).T\n",
-        "    #print(f\"Warping the right coordinate to the left: {warped_to_left.reshape(2) if warped_to_left.shape[0] <= 1 else  warped_to_left}\")\n",
         "   \n",
         "    # Compute euclidean distance between the original left point and the right point warped to the left image\n",
         "    dist = np.linalg.norm(locationsLeft[i_match] - warped_to_left)\n",
-        "    #print(f\"Distance between left and warped-left: {dist}\")\n",
         "\n",
         "    # Inlier or outlier based on the euclidean distance and r_match_thresh\n",
         "    if dist <= r_match_thresh:\n",
