--- a/a3-objectClassification/Assignment3.ipynb
+++ b/a3-objectClassification/Assignment3.ipynb
@@ -657,14 +657,16 @@
         "##### YOUR CODE GOES HERE ######\n",
         "# Define the layers of the MLP network model\n",
         "\n",
-        "# input layer\n",
-        "\n",
-        "\n",
-        "# hidden layers\n",
-        "\n",
-        "\n",
-        "# output layer\n",
-        "\n",
+        "# input layer that transforms our 32x32x3 pixel input to a 3072-dimensional vector\n",
+        "model.add(tf.keras.Input(shape=(32, 32, 3)))\n",
+        "model.add(Flatten())\n",
+        "# hidden layers with 2048, 1024, 512, 64 neurons and reluactivation functions\n",
+        "model.add(Dense(2048, activation='relu'))\n",
+        "model.add(Dense(1024, activation='relu'))\n",
+        "model.add(Dense(512, activation='relu'))\n",
+        "model.add(Dense(64, activation='relu'))\n",
+        "# output layer with 10 neurons (1 per class) and softmax activation.\n",
+        "model.add(Dense(10, activation= 'softmax'))\n",
         "################################\n",
         "\n",
         "# compile the model including optimizer and loss\n",
@@ -673,6 +675,20 @@
         "             metrics=['accuracy'])\n",
         "\n",
         "print(model.summary())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nl2egpq79SCI"
+      },
+      "source": [
+        "model = tf.keras.Sequential()\n",
+        "model.add(tf.keras.Input(shape=(32, 32, 3)))\n",
+        "model.add(Flatten())\n",
+        "model.output_shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -704,7 +720,7 @@
       },
       "source": [
         "##### YOUR CODE GOES HERE ######\n",
-        "\n",
+        "history = model.fit(x=trainSamples, y=trainLabels, batch_size=50, epochs=25, verbose=1, validation_data=(testSamples, testLabels))\n",
         "################################"
       ],
       "execution_count": null,
@@ -728,7 +744,7 @@
       },
       "source": [
         "##### YOUR CODE GOES HERE ######\n",
-        "\n",
+        "plt.plot(history.history['loss'])\n",
         "################################"
       ],
       "execution_count": null,
