--- a/a3-objectClassification/Assignment3.ipynb
+++ b/a3-objectClassification/Assignment3.ipynb
@@ -730,7 +730,14 @@
       },
       "source": [
         "##### YOUR CODE GOES HERE ######\n",
+        "plt.figure(figsize = (12, 5))\n",
+        "plt.xlabel(\"epoch\")\n",
+        "plt.ylabel(\"loss\")\n",
+        "plt.title(\"Training & Validation Loss\")\n",
         "plt.plot(history.history['loss'])\n",
+        "plt.plot(history.history['val_loss'])\n",
+        "plt.legend((\"Traning Loss\", \"Validation Loss\"))\n",
+        "plt.grid(True)\n",
         "################################"
       ],
       "execution_count": null,
