--- a/a4-cnn/Assignment4.ipynb
+++ b/a4-cnn/Assignment4.ipynb
@@ -6,7 +6,8 @@
       "name": "Assignment4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -75,6 +76,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Braafisch/Machine-Vision-Assignments/blob/main/a4-cnn/Assignment4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -382,17 +393,33 @@
         "# Define the layers of the CNN model\n",
         "\n",
         "# input layer\n",
-        "\n",
+        "model.add(tf.keras.Input(shape=(32, 32, 3)))\n",
+        "# 2 conv layers and 1 pooling layer \n",
+        "# convolutional layers with 32 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "# pooling layer with 2x2 pooling\n",
+        "model.add(Conv2D(filters=32, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(Conv2D(filters=32, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(MaxPool2D(pool_size=(2, 2)))\n",
         "# 2 conv layers and 1 pooling layer\n",
-        "\n",
+        "# convolutional layers with 64 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "# pooling layer with 2x2 pooling\n",
+        "model.add(Conv2D(filters=64, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(Conv2D(filters=64, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(MaxPool2D(pool_size=(2, 2)))\n",
         "# 2 conv layers and 1 pooling layer\n",
-        "\n",
-        "# 2 conv layers and 1 pooling layer\n",
-        "\n",
+        "# convolutional layers with 128 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "# pooling layer with 2x2 pooling\n",
+        "model.add(Conv2D(filters=128, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(Conv2D(filters=128, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "model.add(MaxPool2D(pool_size=(2, 2)))\n",
         "# fully connected layer\n",
-        "\n",
+        "# layer to flatten the input for the upcoming fully connected layer\n",
+        "# fully connected layer with 128 neurons and relu activation and he_uniform kernel initializers\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(units=128, activation='relu', kernel_initializer='he_uniform'))\n",
         "# output layer\n",
-        "\n",
+        "# fully connected output layer with 10 neurons (1 per class) and softmax activation\n",
+        "model.add(Dense(units=10, activation='softmax'))\n",
         "################################\n",
         "\n",
         "\n",
@@ -451,7 +478,35 @@
         "\n",
         "\n",
         "##### YOUR CODE GOES HERE ######\n",
+        "callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=3)\n",
         "\n",
+        "# Stochastic Gradient Descent (plain)\n",
+        "modelSGD.compile(optimizer=SGD(learning_rate=3e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
+        "\n",
+        "history = modelSGD.fit(x=trainSamples, y=trainLabels, batch_size=64, epochs=30, verbose=1, callbacks=[callback], validation_data=(testSamples, testLabels))\n",
+        "\n",
+        "_, acc = modelSGD.evaluate(testSamples, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
+        "# RMSprop (with momentum)\n",
+        "modelRMS.compile(optimizer=RMSprop(learning_rate=3e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
+        "\n",
+        "history = modelRMS.fit(x=trainSamples, y=trainLabels, batch_size=64, epochs=30, verbose=1, callbacks=[callback], validation_data=(testSamples, testLabels))\n",
+        "\n",
+        "_, acc = modelRMS.evaluate(testSamples, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
+        "# Adam\n",
+        "modelAdam.compile(optimizer=Adam(learning_rate=3e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
+        "\n",
+        "history = modelAdam.fit(x=trainSamples, y=trainLabels, batch_size=64, epochs=30, verbose=1, callbacks=[callback], validation_data=(testSamples, testLabels))\n",
+        "\n",
+        "_, acc = modelAdam.evaluate(testSamples, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
         "################################"
       ],
       "execution_count": null,
@@ -480,14 +535,60 @@
         "\n",
         "##### YOUR CODE GOES HERE ######\n",
         "# Define the layers of the CNN model with dropout\n",
+        "# input layer\n",
+        "modelDropOut.add(tf.keras.Input(shape=(32, 32, 3)))\n",
         "\n",
+        "# 2 conv layers and 1 pooling layer \n",
+        "# convolutional layers with 32 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "modelDropOut.add(Conv2D(filters=32, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "modelDropOut.add(Conv2D(filters=32, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "# pooling layer with 2x2 pooling\n",
+        "modelDropOut.add(MaxPool2D(pool_size=(2, 2)))\n",
+        "# layers with a rate of 0.33, i.e. 33% of the neurons will be randomly disabled in each batch\n",
+        "modelDropOut.add(Dropout(rate=0.33))\n",
         "\n",
+        "# 2 conv layers and 1 pooling layer\n",
+        "# convolutional layers with 64 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "modelDropOut.add(Conv2D(filters=64, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "modelDropOut.add(Conv2D(filters=64, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "# pooling layer with 2x2 pooling\n",
+        "modelDropOut.add(MaxPool2D(pool_size=(2, 2)))\n",
+        "# layers with a rate of 0.33, i.e. 33% of the neurons will be randomly disabled in each batch\n",
+        "modelDropOut.add(Dropout(rate=0.33))\n",
+        "\n",
+        "# 2 conv layers and 1 pooling layer\n",
+        "# convolutional layers with 128 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
+        "modelDropOut.add(Conv2D(filters=128, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "modelDropOut.add(Conv2D(filters=128, kernel_size=(3,3), padding='same', activation='relu', kernel_initializer='he_uniform'))\n",
+        "# pooling layer with 2x2 pooling\n",
+        "modelDropOut.add(MaxPool2D(pool_size=(2, 2)))\n",
+        "# layers with a rate of 0.33, i.e. 33% of the neurons will be randomly disabled in each batch\n",
+        "modelDropOut.add(Dropout(rate=0.33))\n",
+        "\n",
+        "# fully connected layer\n",
+        "# layer to flatten the input for the upcoming fully connected layer\n",
+        "# fully connected layer with 128 neurons and relu activation and he_uniform kernel initializers\n",
+        "modelDropOut.add(Flatten())\n",
+        "modelDropOut.add(Dense(units=128, activation='relu', kernel_initializer='he_uniform'))\n",
+        "\n",
+        "# output layer\n",
+        "# fully connected output layer with 10 neurons (1 per class) and softmax activation\n",
+        "modelDropOut.add(Dense(units=10, activation='softmax'))\n",
         "\n",
         "# Model summary\n",
         "print(modelDropOut.summary())\n",
         "\n",
         "# train the CNN\n",
+        "callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=3)\n",
         "\n",
+        "modelDropOut.compile(optimizer=Adam(learning_rate=3e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
+        "\n",
+        "history = modelDropOut.fit(x=trainSamples, y=trainLabels, batch_size=64, epochs=30, verbose=1, callbacks=[callback], validation_data=(testSamples, testLabels))\n",
+        "\n",
+        "_, acc = modelDropOut.evaluate(testSamples, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
         "################################"
       ],
       "execution_count": null,
