--- a/a4-cnn/Assignment4.ipynb
+++ b/a4-cnn/Assignment4.ipynb
@@ -214,40 +214,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ybKcetvDlt-o"
-      },
-      "source": [
-        "### In Google Colab only:\n",
-        "Mount the Google Drive associated with your Google account. You will have to click the authorization link and enter the obtained authorization code here in Colab. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "88rhI7gsltLi"
-      },
-      "source": [
-        "# Mount Google Drive\n",
-        "if 'google.colab' in str(get_ipython()):\n",
-        "  from google.colab import drive\n",
-        "  drive.mount('/content/drive', force_remount=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IcxOS80YuDCD"
-      },
-      "source": [
-        "### If you are not using Google Colab:\n",
-        "Just store the image in the same folder as your Jupyter notebook file."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xQJnwTJQPzvF"
       },
       "source": [
@@ -489,6 +455,7 @@
         "\n",
         "_, acc = modelSGD.evaluate(testSamples, testLabels, verbose=1)\n",
         "print(\"Accuracy = {}\".format(acc))\n",
+        "\n",
         "# RMSprop (with momentum)\n",
         "modelRMS.compile(optimizer=RMSprop(learning_rate=3e-4),\n",
         "                 loss='categorical_crossentropy',\n",
@@ -498,6 +465,7 @@
         "\n",
         "_, acc = modelRMS.evaluate(testSamples, testLabels, verbose=1)\n",
         "print(\"Accuracy = {}\".format(acc))\n",
+        "\n",
         "# Adam\n",
         "modelAdam.compile(optimizer=Adam(learning_rate=3e-4),\n",
         "                 loss='categorical_crossentropy',\n",
@@ -669,10 +637,22 @@
         "id": "7vMKBQXrD0cU"
       },
       "source": [
+        "import io\n",
+        "import requests\n",
+        "import zipfile\n",
+        "\n",
         "# path to test images (you will have to modify that)\n",
-        "testDir = \"/content/drive/My Drive/colab/lectures/machineVision/assignments/solutions/a4-cnn/data/\"\n",
+        "testDir = \"/content/a4-cnn/\"\n",
         "\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a4-cnn/data/testData.zip'\n",
         "\n",
+        "response = requests.get(url, allow_redirects = True)\n",
+        "stream = io.BytesIO(response.content)\n",
+        "\n",
+        "print(\"unzipping {}\".format(url))\n",
+        "\n",
+        "with zipfile.ZipFile(stream, 'r') as zip_ref:\n",
+        "    zip_ref.extractall(testDir)\n",
         "\n",
         "# some helper functions to load images from a given URL and run a prediction\n",
         "\n",
