--- a/a4-cnn/Assignment4.ipynb
+++ b/a4-cnn/Assignment4.ipynb
@@ -642,9 +642,9 @@
         "import zipfile\n",
         "\n",
         "# path to test images (you will have to modify that)\n",
-        "testDir = \"/content/a4-cnn/\"\n",
+        "testDir = \"/content/cnn/\"\n",
         "\n",
-        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a4-cnn/data/testData.zip'\n",
+        "url = 'https://raw.githubusercontent.com/Braafisch/Machine-Vision-Assignments/main/a4-cnn/data/test_images.zip'\n",
         "\n",
         "response = requests.get(url, allow_redirects = True)\n",
         "stream = io.BytesIO(response.content)\n",
@@ -879,11 +879,15 @@
         "##### YOUR CODE GOES HERE ######\n",
         "\n",
         "# Compile the new CNN model\n",
-        "\n",
+        "modelFineTune.compile(optimizer=Adam(learning_rate=1e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
         "# Train the new CNN model (make sure to use both callbacks defined above !!)\n",
+        "history = modelFineTune.fit(x=trainSamplesPP, y=trainLabels, batch_size=64, epochs=10, verbose=1, callbacks=[earlyStopping, checkPoint], validation_data=(testSamplesPP, testLabels))\n",
         "\n",
         "# Evaluate the accuracy\n",
-        "\n",
+        "_, acc = modelFineTune.evaluate(testSamplesPP, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
         "################################"
       ],
       "execution_count": null,
@@ -982,9 +986,33 @@
         "base_model.trainable = True\n",
         "\n",
         "##### YOUR CODE GOES HERE ######\n",
-        "\n",
         "# Replicate the CNN architecture from above and use 'modelFineTuneFull' as a variable for this CNN model. \n",
+        "out = base_model.output \n",
+        "out = Flatten()(out)\n",
+        "out = BatchNormalization()(out)\n",
+        "out = Dense(256, activation='relu')(out)\n",
+        "out = Dropout(0.3)(out)\n",
+        "out = BatchNormalization()(out)\n",
+        "out = Dense(128, activation='relu')(out)\n",
+        "out = Dropout(0.3)(out)\n",
+        "out = BatchNormalization()(out)\n",
+        "out = Dense(64, activation='relu')(out)\n",
+        "out = Dropout(0.3)(out)\n",
         "\n",
+        "out = Dense(10, activation='softmax')(out)\n",
+        "\n",
+        "modelFineTuneFull = tf.keras.models.Model(inputs=inputs, outputs=out)\n",
+        "\n",
+        "# Compile the new CNN model\n",
+        "modelFineTune.compile(optimizer=Adam(learning_rate=1e-4),\n",
+        "                 loss='categorical_crossentropy',\n",
+        "                 metrics=['accuracy'])\n",
+        "# Train the new CNN model (make sure to use both callbacks defined above !!)\n",
+        "history = modelFineTune.fit(x=trainSamplesPP, y=trainLabels, batch_size=64, epochs=10, verbose=1, callbacks=[earlyStopping, checkPoint], validation_data=(testSamplesPP, testLabels))\n",
+        "\n",
+        "# Evaluate the accuracy\n",
+        "_, acc = modelFineTune.evaluate(testSamplesPP, testLabels, verbose=1)\n",
+        "print(\"Accuracy = {}\".format(acc))\n",
         "################################"
       ],
       "execution_count": null,
