Update code to new TensorFlow version

--- a/a4-cnn/Assignment4.ipynb
+++ b/a4-cnn/Assignment4.ipynb
@@ -161,12 +161,12 @@
         "\n",
         "# Tensorflow and Keras\n",
         "import tensorflow as tf\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Conv2D, MaxPool2D, Flatten, Dense, Dropout, BatchNormalization, Activation, Input, Lambda\n",
-        "from keras.optimizers import Adam, RMSprop, SGD\n",
-        "from keras.utils import to_categorical\n",
-        "from keras.datasets import cifar10\n",
-        "from keras.preprocessing import image\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPool2D, Flatten, Dense, Dropout, BatchNormalization, Activation, Input, Lambda\n",
+        "from tensorflow.keras.optimizers import Adam, RMSprop, SGD\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow.keras.datasets import cifar10\n",
+        "from tensorflow.keras.preprocessing import image\n",
         "\n",
         "# Check the GPU that we got from Colab\n",
         "!nvidia-smi \n",
@@ -359,7 +359,7 @@
         "# Define the layers of the CNN model\n",
         "\n",
         "# input layer\n",
-        "model.add(tf.keras.Input(shape=(32, 32, 3)))\n",
+        "model.add(tf.keras.layers.InputLayer(input_shape=(32, 32, 3)))\n",
         "# 2 conv layers and 1 pooling layer \n",
         "# convolutional layers with 32 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
         "# pooling layer with 2x2 pooling\n",
@@ -504,7 +504,7 @@
         "##### YOUR CODE GOES HERE ######\n",
         "# Define the layers of the CNN model with dropout\n",
         "# input layer\n",
-        "modelDropOut.add(tf.keras.Input(shape=(32, 32, 3)))\n",
+        "modelDropOut.add(tf.keras.layers.InputLayer(input_shape=(32, 32, 3)))\n",
         "\n",
         "# 2 conv layers and 1 pooling layer \n",
         "# convolutional layers with 32 filters of size 3x3, relu activation functions, he_uniform kernel initializers and same padding\n",
