--- a/a5-vae/Assignment5.ipynb
+++ b/a5-vae/Assignment5.ipynb
@@ -8,7 +8,8 @@
       "provenance": [],
       "collapsed_sections": [
         "PE11CcpTosqZ"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -77,6 +78,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Braafisch/Machine-Vision-Assignments/blob/main/a5-vae/Assignment5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
