--- a/a5-vae/Assignment5.ipynb
+++ b/a5-vae/Assignment5.ipynb
@@ -381,6 +381,317 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0P3_LjIvRj_O"
+      },
+      "source": [
+        "### Excercise 2.1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HKG-4GIhke7f"
+      },
+      "source": [
+        "!pip install tensorflow-probability\n",
+        "\n",
+        "# to generate gifs\n",
+        "!pip install imageio\n",
+        "!pip install git+https://github.com/tensorflow/docs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bm6wFWh6S1tE"
+      },
+      "source": [
+        "train_images, test_images = train_test_split(lfwDataset, test_size=11233, train_size=2000)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ECCQAU4SRPIW"
+      },
+      "source": [
+        "train_size = 60000\n",
+        "batch_size = 32\n",
+        "test_size = 10000"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wdf5Mr2QVXh2"
+      },
+      "source": [
+        "train_dataset = (tf.data.Dataset.from_tensor_slices(train_images)\n",
+        "                 .shuffle(train_size).batch(batch_size))\n",
+        "test_dataset = (tf.data.Dataset.from_tensor_slices(test_images)\n",
+        "                .shuffle(test_size).batch(batch_size))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W1lLOcuQLrBG"
+      },
+      "source": [
+        "class CVAE(tf.keras.Model):\n",
+        "  \"\"\"Convolutional variational autoencoder.\"\"\"\n",
+        "\n",
+        "  def __init__(self, latent_dim):\n",
+        "    super(CVAE, self).__init__()\n",
+        "    self.latent_dim = latent_dim\n",
+        "    self.encoder = tf.keras.Sequential(\n",
+        "        [\n",
+        "            tf.keras.layers.InputLayer(input_shape=(64, 64, 3)),\n",
+        "            tf.keras.layers.Conv2D(\n",
+        "                filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+        "            tf.keras.layers.Conv2D(\n",
+        "                filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+        "            tf.keras.layers.Conv2D(\n",
+        "                filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+        "            tf.keras.layers.Conv2D(\n",
+        "                filters=128, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+        "            tf.keras.layers.Flatten(),\n",
+        "            # No activation\n",
+        "            tf.keras.layers.Dense(latent_dim + latent_dim),\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    self.decoder = tf.keras.Sequential(\n",
+        "        [\n",
+        "            tf.keras.layers.InputLayer(input_shape=(latent_dim,)),\n",
+        "            tf.keras.layers.Dense(units=16*16*32, activation=tf.nn.relu),\n",
+        "            tf.keras.layers.Reshape(target_shape=(16, 16, 32)),\n",
+        "            tf.keras.layers.Conv2DTranspose(\n",
+        "                filters=64, kernel_size=3, strides=2, padding='same',\n",
+        "                activation='relu'),\n",
+        "            tf.keras.layers.Conv2DTranspose(\n",
+        "                filters=128, kernel_size=3, strides=2, padding='same',\n",
+        "                activation='relu'),\n",
+        "            # No activation\n",
+        "            tf.keras.layers.Conv2DTranspose(\n",
+        "                filters=3, kernel_size=1, strides=1, padding='same'),\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "  @tf.function\n",
+        "  def sample(self, eps=None):\n",
+        "    if eps is None:\n",
+        "      eps = tf.random.normal(shape=(100, self.latent_dim))\n",
+        "    return self.decode(eps, apply_sigmoid=True)\n",
+        "\n",
+        "  def encode(self, x):\n",
+        "    mean, logvar = tf.split(self.encoder(x), num_or_size_splits=2, axis=1)\n",
+        "    return mean, logvar\n",
+        "\n",
+        "  def reparameterize(self, mean, logvar):\n",
+        "    eps = tf.random.normal(shape=mean.shape)\n",
+        "    return eps * tf.exp(logvar * .5) + mean\n",
+        "\n",
+        "  def decode(self, z, apply_sigmoid=False):\n",
+        "    logits = self.decoder(z)\n",
+        "    if apply_sigmoid:\n",
+        "      probs = tf.sigmoid(logits)\n",
+        "      return probs\n",
+        "    return logits"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pWZhhLpLLxFW"
+      },
+      "source": [
+        "optimizer = tf.keras.optimizers.Adam(1e-4)\n",
+        "\n",
+        "\n",
+        "def log_normal_pdf(sample, mean, logvar, raxis=1):\n",
+        "  log2pi = tf.math.log(2. * np.pi)\n",
+        "  return tf.reduce_sum(\n",
+        "      -.5 * ((sample - mean) ** 2. * tf.exp(-logvar) + logvar + log2pi),\n",
+        "      axis=raxis)\n",
+        "\n",
+        "\n",
+        "def compute_loss(model, x):\n",
+        "  mean, logvar = model.encode(x)\n",
+        "  z = model.reparameterize(mean, logvar)\n",
+        "  x_logit = model.decode(z)\n",
+        "  cross_ent = tf.nn.sigmoid_cross_entropy_with_logits(logits=x_logit, labels=x)\n",
+        "  logpx_z = -tf.reduce_sum(cross_ent, axis=[1, 2, 3])\n",
+        "  logpz = log_normal_pdf(z, 0., 0.)\n",
+        "  logqz_x = log_normal_pdf(z, mean, logvar)\n",
+        "  return -tf.reduce_mean(logpx_z + logpz - logqz_x)\n",
+        "\n",
+        "\n",
+        "@tf.function\n",
+        "def train_step(model, x, optimizer):\n",
+        "  \"\"\"Executes one training step and returns the loss.\n",
+        "\n",
+        "  This function computes the loss and gradients, and uses the latter to\n",
+        "  update the model's parameters.\n",
+        "  \"\"\"\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    loss = compute_loss(model, x)\n",
+        "  gradients = tape.gradient(loss, model.trainable_variables)\n",
+        "  optimizer.apply_gradients(zip(gradients, model.trainable_variables))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7oGWnQKLz2v"
+      },
+      "source": [
+        "epochs = 50\n",
+        "# set the dimensionality of the latent space to a plane for visualization later\n",
+        "latent_dim = 32\n",
+        "num_examples_to_generate = 16\n",
+        "\n",
+        "# keeping the random vector constant for generation (prediction) so\n",
+        "# it will be easier to see the improvement.\n",
+        "random_vector_for_generation = tf.random.normal(\n",
+        "    shape=[num_examples_to_generate, latent_dim])\n",
+        "model = CVAE(latent_dim)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Oylio6WOMr3i"
+      },
+      "source": [
+        "def generate_and_save_images(model, epoch, test_sample):\n",
+        "  mean, logvar = model.encode(test_sample)\n",
+        "  z = model.reparameterize(mean, logvar)\n",
+        "  predictions = model.sample(z)\n",
+        "  fig = plt.figure(figsize=(4, 4))\n",
+        "\n",
+        "  for i in range(predictions.shape[0]):\n",
+        "    plt.subplot(4, 8, 2*i + 1)\n",
+        "    plt.imshow(predictions[i, :, :, :])\n",
+        "    plt.title('$\\^{x}_{%i}$'%(i+1))\n",
+        "    plt.axis('off')\n",
+        "    plt.subplot(4, 8, 2*i + 2)\n",
+        "    plt.title('$x_{%i}$'%(i+1))\n",
+        "    plt.imshow(test_sample[i, :, :, :])\n",
+        "    plt.axis('off')\n",
+        "\n",
+        "  # tight_layout minimizes the overlap between 2 sub-plots\n",
+        "  plt.savefig('image_at_epoch_{:04d}.png'.format(epoch))\n",
+        "  plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_NEXMy4INBI2"
+      },
+      "source": [
+        "# Pick a sample of the test set for generating output images\n",
+        "assert batch_size >= num_examples_to_generate\n",
+        "for test_batch in test_dataset.take(1):\n",
+        "  test_sample = test_batch[0:num_examples_to_generate, :, :, :]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y6mos7Z4NDOj"
+      },
+      "source": [
+        "generate_and_save_images(model, 0, test_sample)\n",
+        "\n",
+        "for epoch in range(1, epochs + 1):\n",
+        "  start_time = time.time()\n",
+        "  for train_x in train_dataset:\n",
+        "    train_step(model, train_x, optimizer)\n",
+        "  end_time = time.time()\n",
+        "\n",
+        "  loss = tf.keras.metrics.Mean()\n",
+        "  for test_x in test_dataset:\n",
+        "    loss(compute_loss(model, test_x))\n",
+        "  elbo = -loss.result()\n",
+        "  display.clear_output(wait=False)\n",
+        "  print('Epoch: {}, Test set ELBO: {}, time elapse for current epoch: {}'\n",
+        "        .format(epoch, elbo, end_time - start_time))\n",
+        "  generate_and_save_images(model, epoch, test_sample)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L7WZFaPKa82P"
+      },
+      "source": [
+        "samples = model.sample()\n",
+        "plt.figure(figsize=(10,10))\n",
+        "for i in range(samples.shape[0]):\n",
+        "  plt.subplot(10, 10, i+1)\n",
+        "  plt.imshow(samples[i, :, :, :])\n",
+        "  plt.axis('off')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rE8KwXP3kJ0t"
+      },
+      "source": [
+        "anim_file = 'cvae.gif'\n",
+        "\n",
+        "with imageio.get_writer(anim_file, mode='I') as writer:\n",
+        "  filenames = glob.glob('image*.png')\n",
+        "  filenames = sorted(filenames)\n",
+        "  for filename in filenames:\n",
+        "    image = imageio.imread(filename)\n",
+        "    writer.append_data(image)\n",
+        "  image = imageio.imread(filename)\n",
+        "  writer.append_data(image)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-TGN16bokM-Q"
+      },
+      "source": [
+        "import tensorflow_docs.vis.embed as embed\n",
+        "embed.embed_file(anim_file)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
